// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/basic/radio/demo/badge.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-radio-group dcloud-radio-group-solid"
  >
    <span
      class="dcloud-badge"
    >
      <label
        class="dcloud-radio-button-wrapper"
      >
        <span
          class="dcloud-radio-button"
        >
          <input
            class="dcloud-radio-button-input"
            type="radio"
            value="1"
          />
          <span
            class="dcloud-radio-button-inner"
          />
        </span>
        <span>
          Click Me
        </span>
      </label>
      <sup
        class="dcloud-scroll-number dcloud-badge-count"
        data-show="true"
        title="1"
      >
        <span
          class="dcloud-scroll-number-only"
          style="transition:none"
        >
          <span
            class="dcloud-scroll-number-only-unit current"
          >
            1
          </span>
        </span>
      </sup>
    </span>
    <span
      class="dcloud-badge"
    >
      <label
        class="dcloud-radio-button-wrapper"
      >
        <span
          class="dcloud-radio-button"
        >
          <input
            class="dcloud-radio-button-input"
            type="radio"
            value="2"
          />
          <span
            class="dcloud-radio-button-inner"
          />
        </span>
        <span>
          Not Me
        </span>
      </label>
      <sup
        class="dcloud-scroll-number dcloud-badge-count"
        data-show="true"
        title="2"
      >
        <span
          class="dcloud-scroll-number-only"
          style="transition:none"
        >
          <span
            class="dcloud-scroll-number-only-unit current"
          >
            2
          </span>
        </span>
      </sup>
    </span>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/radio/demo/basic.md correctly 1`] = `
LoadedCheerio {
  "0": <label
    class="dcloud-radio-wrapper"
  >
    <span
      class="dcloud-radio"
    >
      <input
        class="dcloud-radio-input"
        type="radio"
      />
      <span
        class="dcloud-radio-inner"
      />
    </span>
    <span>
      Radio
    </span>
  </label>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/radio/demo/disabled.md correctly 1`] = `
LoadedCheerio {
  "0": <label
    class="dcloud-radio-wrapper dcloud-radio-wrapper-disabled"
  >
    <span
      class="dcloud-radio dcloud-radio-disabled"
    >
      <input
        class="dcloud-radio-input"
        disabled=""
        type="radio"
      />
      <span
        class="dcloud-radio-inner"
      />
    </span>
    <span>
      Disabled
    </span>
  </label>,
  "1": <label
    class="dcloud-radio-wrapper dcloud-radio-wrapper-disabled"
  >
    <span
      class="dcloud-radio dcloud-radio-checked dcloud-radio-disabled"
    >
      <input
        checked=""
        class="dcloud-radio-input"
        disabled=""
        type="radio"
      />
      <span
        class="dcloud-radio-inner"
      />
    </span>
    <span>
      Disabled
    </span>
  </label>,
  "2": <br />,
  "3": <button
    class="dcloud-btn dcloud-btn-primary"
    style="margin-top:16px"
    type="button"
  >
    <span>
      Toggle disabled
    </span>
  </button>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 4,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/radio/demo/radio-solid.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-radio-group dcloud-radio-group-outline"
  >
    <label
      class="dcloud-radio-wrapper"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="0"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        默认
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper custom-radio-primary"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="1"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        默认
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper custom-radio-success"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="2"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        默认
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper custom-radio-info"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="3"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        默认
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper custom-radio-warning"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="4"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        默认
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper custom-radio-error"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="5"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        默认
      </span>
    </label>
  </div>,
  "1": <hr />,
  "2": <div
    class="dcloud-radio-group dcloud-radio-group-outline"
  >
    <label
      class="dcloud-radio-wrapper solid"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="0"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        实心
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper solid custom-radio-primary"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="1"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        实心
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper solid custom-radio-success"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="2"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        实心
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper solid custom-radio-info"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="3"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        实心
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper solid custom-radio-warning"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="4"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        实心
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper solid custom-radio-error"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="5"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        实心
      </span>
    </label>
  </div>,
  "3": <hr />,
  "4": <div
    class="dcloud-radio-group dcloud-radio-group-outline"
  >
    <label
      class="dcloud-radio-wrapper small"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="2"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        线条小尺寸
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper small custom-radio-primary"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="3"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        线条小尺寸primary
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper small custom-radio-success"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="4"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        线条小尺寸success
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper small custom-radio-info"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="5"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        线条小尺寸info
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper small custom-radio-warning"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="6"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        线条小尺寸warning
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper small custom-radio-error"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="7"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        线条小尺寸error
      </span>
    </label>
  </div>,
  "5": <hr />,
  "6": <div
    class="dcloud-radio-group dcloud-radio-group-outline"
  >
    <label
      class="dcloud-radio-wrapper solid small"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="8"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        实心小尺寸normal
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper solid small custom-radio-primary"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="9"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        实心小尺寸primary
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper solid small custom-radio-success"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="10"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        实心小尺寸success
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper solid small custom-radio-info"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="11"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        实心小尺寸info
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper solid small custom-radio-warning"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="12"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        实心小尺寸warning
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper solid small custom-radio-error"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="13"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        实心小尺寸error
      </span>
    </label>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 7,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/radio/demo/radiobutton.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-radio-group dcloud-radio-group-outline"
  >
    <label
      class="dcloud-radio-button-wrapper dcloud-radio-button-wrapper-checked"
    >
      <span
        class="dcloud-radio-button dcloud-radio-button-checked"
      >
        <input
          checked=""
          class="dcloud-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper"
    >
      <span
        class="dcloud-radio-button"
      >
        <input
          class="dcloud-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper"
    >
      <span
        class="dcloud-radio-button"
      >
        <input
          class="dcloud-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper"
    >
      <span
        class="dcloud-radio-button"
      >
        <input
          class="dcloud-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  "1": <div
    class="dcloud-radio-group dcloud-radio-group-outline"
    style="margin-top:16px"
  >
    <label
      class="dcloud-radio-button-wrapper dcloud-radio-button-wrapper-checked"
    >
      <span
        class="dcloud-radio-button dcloud-radio-button-checked"
      >
        <input
          checked=""
          class="dcloud-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper dcloud-radio-button-wrapper-disabled"
    >
      <span
        class="dcloud-radio-button dcloud-radio-button-disabled"
      >
        <input
          class="dcloud-radio-button-input"
          disabled=""
          type="radio"
          value="b"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper"
    >
      <span
        class="dcloud-radio-button"
      >
        <input
          class="dcloud-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper"
    >
      <span
        class="dcloud-radio-button"
      >
        <input
          class="dcloud-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  "2": <div
    class="dcloud-radio-group dcloud-radio-group-outline"
    style="margin-top:16px"
  >
    <label
      class="dcloud-radio-button-wrapper dcloud-radio-button-wrapper-checked dcloud-radio-button-wrapper-disabled"
    >
      <span
        class="dcloud-radio-button dcloud-radio-button-checked dcloud-radio-button-disabled"
      >
        <input
          checked=""
          class="dcloud-radio-button-input"
          disabled=""
          type="radio"
          value="a"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper dcloud-radio-button-wrapper-disabled"
    >
      <span
        class="dcloud-radio-button dcloud-radio-button-disabled"
      >
        <input
          class="dcloud-radio-button-input"
          disabled=""
          type="radio"
          value="b"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper dcloud-radio-button-wrapper-disabled"
    >
      <span
        class="dcloud-radio-button dcloud-radio-button-disabled"
      >
        <input
          class="dcloud-radio-button-input"
          disabled=""
          type="radio"
          value="c"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper dcloud-radio-button-wrapper-disabled"
    >
      <span
        class="dcloud-radio-button dcloud-radio-button-disabled"
      >
        <input
          class="dcloud-radio-button-input"
          disabled=""
          type="radio"
          value="d"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 3,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/radio/demo/radiobutton-solid.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-radio-group dcloud-radio-group-solid"
  >
    <label
      class="dcloud-radio-button-wrapper dcloud-radio-button-wrapper-checked"
    >
      <span
        class="dcloud-radio-button dcloud-radio-button-checked"
      >
        <input
          checked=""
          class="dcloud-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper"
    >
      <span
        class="dcloud-radio-button"
      >
        <input
          class="dcloud-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper"
    >
      <span
        class="dcloud-radio-button"
      >
        <input
          class="dcloud-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper"
    >
      <span
        class="dcloud-radio-button"
      >
        <input
          class="dcloud-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  "1": <div
    class="dcloud-radio-group dcloud-radio-group-solid"
    style="margin-top:16px"
  >
    <label
      class="dcloud-radio-button-wrapper"
    >
      <span
        class="dcloud-radio-button"
      >
        <input
          class="dcloud-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper dcloud-radio-button-wrapper-disabled"
    >
      <span
        class="dcloud-radio-button dcloud-radio-button-disabled"
      >
        <input
          class="dcloud-radio-button-input"
          disabled=""
          type="radio"
          value="b"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper dcloud-radio-button-wrapper-checked"
    >
      <span
        class="dcloud-radio-button dcloud-radio-button-checked"
      >
        <input
          checked=""
          class="dcloud-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper"
    >
      <span
        class="dcloud-radio-button"
      >
        <input
          class="dcloud-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 2,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/radio/demo/radiogroup.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-radio-group dcloud-radio-group-outline"
  >
    <label
      class="dcloud-radio-wrapper dcloud-radio-wrapper-checked"
    >
      <span
        class="dcloud-radio dcloud-radio-checked"
      >
        <input
          checked=""
          class="dcloud-radio-input"
          type="radio"
          value="1"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        A
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="2"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        B
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="3"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        C
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="4"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        D
      </span>
    </label>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/radio/demo/radiogroup-more.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-radio-group dcloud-radio-group-outline"
  >
    <div
      class="dcloud-space dcloud-space-vertical"
    >
      <div
        class="dcloud-space-item"
        style="margin-bottom:8px"
      >
        <label
          class="dcloud-radio-wrapper dcloud-radio-wrapper-checked"
        >
          <span
            class="dcloud-radio dcloud-radio-checked"
          >
            <input
              checked=""
              class="dcloud-radio-input"
              type="radio"
              value="1"
            />
            <span
              class="dcloud-radio-inner"
            />
          </span>
          <span>
            Option A
          </span>
        </label>
      </div>
      <div
        class="dcloud-space-item"
        style="margin-bottom:8px"
      >
        <label
          class="dcloud-radio-wrapper"
        >
          <span
            class="dcloud-radio"
          >
            <input
              class="dcloud-radio-input"
              type="radio"
              value="2"
            />
            <span
              class="dcloud-radio-inner"
            />
          </span>
          <span>
            Option B
          </span>
        </label>
      </div>
      <div
        class="dcloud-space-item"
        style="margin-bottom:8px"
      >
        <label
          class="dcloud-radio-wrapper"
        >
          <span
            class="dcloud-radio"
          >
            <input
              class="dcloud-radio-input"
              type="radio"
              value="3"
            />
            <span
              class="dcloud-radio-inner"
            />
          </span>
          <span>
            Option C
          </span>
        </label>
      </div>
      <div
        class="dcloud-space-item"
      >
        <label
          class="dcloud-radio-wrapper"
        >
          <span
            class="dcloud-radio"
          >
            <input
              class="dcloud-radio-input"
              type="radio"
              value="4"
            />
            <span
              class="dcloud-radio-inner"
            />
          </span>
          <span>
            More...
          </span>
        </label>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/radio/demo/radiogroup-options.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-radio-group dcloud-radio-group-outline"
  >
    <label
      class="dcloud-radio-wrapper dcloud-radio-wrapper-checked"
    >
      <span
        class="dcloud-radio dcloud-radio-checked"
      >
        <input
          checked=""
          class="dcloud-radio-input"
          type="radio"
          value="Apple"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="Pear"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="Orange"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>,
  "1": <br />,
  "2": <div
    class="dcloud-radio-group dcloud-radio-group-outline"
  >
    <label
      class="dcloud-radio-wrapper dcloud-radio-wrapper-checked"
    >
      <span
        class="dcloud-radio dcloud-radio-checked"
      >
        <input
          checked=""
          class="dcloud-radio-input"
          type="radio"
          value="Apple"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="Pear"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper dcloud-radio-wrapper-disabled"
    >
      <span
        class="dcloud-radio dcloud-radio-disabled"
      >
        <input
          class="dcloud-radio-input"
          disabled=""
          type="radio"
          value="Orange"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>,
  "3": <br />,
  "4": <br />,
  "5": <div
    class="dcloud-radio-group dcloud-radio-group-outline"
  >
    <label
      class="dcloud-radio-button-wrapper dcloud-radio-button-wrapper-checked"
    >
      <span
        class="dcloud-radio-button dcloud-radio-button-checked"
      >
        <input
          checked=""
          class="dcloud-radio-button-input"
          type="radio"
          value="Apple"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper"
    >
      <span
        class="dcloud-radio-button"
      >
        <input
          class="dcloud-radio-button-input"
          type="radio"
          value="Pear"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper"
    >
      <span
        class="dcloud-radio-button"
      >
        <input
          class="dcloud-radio-button-input"
          type="radio"
          value="Orange"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>,
  "6": <br />,
  "7": <br />,
  "8": <div
    class="dcloud-radio-group dcloud-radio-group-solid"
  >
    <label
      class="dcloud-radio-button-wrapper dcloud-radio-button-wrapper-checked"
    >
      <span
        class="dcloud-radio-button dcloud-radio-button-checked"
      >
        <input
          checked=""
          class="dcloud-radio-button-input"
          type="radio"
          value="Apple"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper"
    >
      <span
        class="dcloud-radio-button"
      >
        <input
          class="dcloud-radio-button-input"
          type="radio"
          value="Pear"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper dcloud-radio-button-wrapper-disabled"
    >
      <span
        class="dcloud-radio-button dcloud-radio-button-disabled"
      >
        <input
          class="dcloud-radio-button-input"
          disabled=""
          type="radio"
          value="Orange"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 9,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/radio/demo/radiogroup-with-name.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-radio-group dcloud-radio-group-outline"
  >
    <label
      class="dcloud-radio-wrapper dcloud-radio-wrapper-checked"
    >
      <span
        class="dcloud-radio dcloud-radio-checked"
      >
        <input
          checked=""
          class="dcloud-radio-input"
          name="radiogroup"
          type="radio"
          value="1"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        A
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          name="radiogroup"
          type="radio"
          value="2"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        B
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          name="radiogroup"
          type="radio"
          value="3"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        C
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          name="radiogroup"
          type="radio"
          value="4"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        D
      </span>
    </label>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/radio/demo/size.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-radio-group dcloud-radio-group-outline dcloud-radio-group-large"
  >
    <label
      class="dcloud-radio-button-wrapper dcloud-radio-button-wrapper-checked"
    >
      <span
        class="dcloud-radio-button dcloud-radio-button-checked"
      >
        <input
          checked=""
          class="dcloud-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper"
    >
      <span
        class="dcloud-radio-button"
      >
        <input
          class="dcloud-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper"
    >
      <span
        class="dcloud-radio-button"
      >
        <input
          class="dcloud-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper"
    >
      <span
        class="dcloud-radio-button"
      >
        <input
          class="dcloud-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  "1": <div
    class="dcloud-radio-group dcloud-radio-group-outline"
    style="margin-top:16px"
  >
    <label
      class="dcloud-radio-button-wrapper dcloud-radio-button-wrapper-checked"
    >
      <span
        class="dcloud-radio-button dcloud-radio-button-checked"
      >
        <input
          checked=""
          class="dcloud-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper"
    >
      <span
        class="dcloud-radio-button"
      >
        <input
          class="dcloud-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper"
    >
      <span
        class="dcloud-radio-button"
      >
        <input
          class="dcloud-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper"
    >
      <span
        class="dcloud-radio-button"
      >
        <input
          class="dcloud-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  "2": <div
    class="dcloud-radio-group dcloud-radio-group-outline dcloud-radio-group-small"
    style="margin-top:16px"
  >
    <label
      class="dcloud-radio-button-wrapper dcloud-radio-button-wrapper-checked"
    >
      <span
        class="dcloud-radio-button dcloud-radio-button-checked"
      >
        <input
          checked=""
          class="dcloud-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper"
    >
      <span
        class="dcloud-radio-button"
      >
        <input
          class="dcloud-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper"
    >
      <span
        class="dcloud-radio-button"
      >
        <input
          class="dcloud-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="dcloud-radio-button-wrapper"
    >
      <span
        class="dcloud-radio-button"
      >
        <input
          class="dcloud-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="dcloud-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 3,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
